# loreSystem

./: .env.example  .gitignore  ADD_ALL_TOOLS_RETURN.py  ADD_FINAL_9_SQLITE.py  ADD_NEW_TOOLS_RETURN.py  ADD_SQL_TABLES.py  AGENTS.md  APPLY_ECONOMY_MILITARY.py  APPLY_PROGRESSION.py  AUTO_FIX_SCHEMAS.py  CHANGELOG.md  CLAUDE.md  CLI_IMPLEMENTATION.md  CLI_QUICK_REF.md  COMPLETE_SQL_SCHEMAS.py  CONTRIBUTING.md  EXTRACT_AND_REPLACE_RETURN.py  FIX_SQL_ERRORS.py  GAME_DESIGN.md  GENERATE_SCHEMAS_REGEX.py  IMPLEMENTATION_SUMMARY.md  INIT_DATABASE.py  LICENSE  MOVE_MD_TO_DOCS.py  MUTATION_TESTING_README.md  Makefile  OPTIMIZED_SQL_GENERATOR.py  PROGRESSION_SIMULATOR_README.md  PROJECT_SUMMARY.md  QUICKSTART_GUI.md  QUICK_REFERENCE.md  README.md  SECURITY.md  SETUP_PROGRESSION.py  STRUCTURE.md  UNCOVERED_ENTITIES.md  VERIFY_SERVER_STARTUP.py  WINDOWS_SETUP.md  add_all_inmem_simple.py  add_all_sqlite.py  (+38 more)
.claude/: settings.json
.github/: PULL_REQUEST_TEMPLATE.md
ExampleDragonStory/: dragon_story_3_chapters.txt  dragon_story_complete.json  dragon_story_summary.md  narrative.json  society.json  systems.json  technical.json  world.json
agents/: README.md  SUBAGENTS_CONFIG.json  SUBAGENTS_USAGE.md
config/: config.yaml
docs/: CLI_COMPLETION_REPORT.md  DATABASE_DOMAIN_VERIFICATION.md  DOCUMENTATION_IMPROVEMENT_REPORT.md  DOCUMENTATION_IMPROVEMENT_SUMMARY.md  DOMAIN_EDGE_CASES_RU.md  GACHA_AGENTS.md  GACHA_MECHANICS.md  GLOSSARY.md  GUI_IMPLEMENTATION_SUMMARY.md  Genres_of_Games.md  IMPLEMENTATION_GUIDE.md  LOOM_GACHA_WORKFLOW.md  LORE_ANALYSIS_AND_TODO.md  MUSIC_SYSTEM.md  PHASE_1_4_COMPLETION.md  PROJECT_SUMMARY.md  QUICKSTART_GUI.md  QUICK_REFERENCE.md  README.md  REPOSITORY_GENERATION.md  TASK_COMPLETION_SUMMARY.md  USER_GUIDE.md  UTM Shared folders.md  VALIDATION_QUICK_REFERENCE.md
entities/: character.json  narrative.json
examples/: campaign_war_of_three_kingdoms.json  economy_system.json  enhanced_interconnected_lore.json  quest_ancient_artifact_recovery.json  sample_dark_fantasy_gacha_ru.json  sample_lore.json  shadow_dark_cinematic_sample.json
exports/: unity_valid_campaign.prefab  unreal_error_campaign.json
lore_mcp_server/: .gitignore  (+7 more)
(+1080 files in other folders)
